--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>Portfolio progress..</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="introduction">
+      <p>Hello, I'm</p>
+      <h1>Chrys Pham</h1>
+      <h2>Front-end Developer based in Los Angeles</h2>
+      <a href="#" class="btn btn-primary">Contact Me</a>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
