added margin and padding to introduction header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="introduction">
       <p>Hello, I'm</p>
       <h1>Chrys Pham</h1>
-      <h2>Front-end Developer based in Los Angeles</h2>
+      <h2 class="mb-5">Front-end Developer based in Los Angeles</h2>
       <a href="#" class="btn btn-primary">Contact Me</a>
     </div>
 
