--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
       <a href="#" class="btn btn-primary">Contact Me</a>
     </div>
 
+    <p class="text-center m-5">Featured Projects which show my best work</p>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+          <h2 class="mb-5">Yogurt Project</h2>
+          <p class="mb-5 text-muted">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec ex
+            ante. Etiam a efficitur orci. Maecenas vel viverra odio. Vestibulum
+            egestas pharetra ante. Maecenas vulputate nunc in ex blandit,
+            feugiat laoreet arcu malesuada. Sed arcu lectus, lacinia vel cursus
+            et, facilisis a leo. Ut eget risus tellus. Suspendisse quis mi
+            varius lorem volutpat feugiat ut vitae est. Donec mollis felis quis
+            turpis facilisis, quis molestie elit pulvinar. Aliquam congue eget
+            mi sed molestie.
+          </p>
+          <a href="#" class="btn btn-branding-outline">Learn More</a>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
