added weather and dictionary projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,58 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="project-info">
+            <h2 class="mb-5">Weather Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec
+              ex ante. Etiam a efficitur orci. Maecenas vel viverra odio.
+              Vestibulum egestas pharetra ante. Maecenas vulputate nunc in ex
+              blandit, feugiat laoreet arcu malesuada. Sed arcu lectus, lacinia
+              vel cursus et, facilisis a leo. Ut eget risus tellus. Suspendisse
+              quis mi varius lorem volutpat feugiat ut vitae est. Donec mollis
+              felis quis turpis facilisis, quis molestie elit pulvinar. Aliquam
+              congue eget mi sed molestie.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn More</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/weather.png"
+            class="img-fluid"
+            alt="weather project"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/dictionary.png"
+            class="img-fluid"
+            alt="dictionary project"
+          />
+        </div>
+        <div class="col">
+          <div class="project-info">
+            <h2 class="mb-5">Dictionary Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec
+              ex ante. Etiam a efficitur orci. Maecenas vel viverra odio.
+              Vestibulum egestas pharetra ante. Maecenas vulputate nunc in ex
+              blandit, feugiat laoreet arcu malesuada. Sed arcu lectus, lacinia
+              vel cursus et, facilisis a leo. Ut eget risus tellus. Suspendisse
+              quis mi varius lorem volutpat feugiat ut vitae est. Donec mollis
+              felis quis turpis facilisis, quis molestie elit pulvinar. Aliquam
+              congue eget mi sed molestie.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn More</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script
