edited homepage content design

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p class="text-center m-5">Featured Projects which show my best work</p>
 
     <div class="container">
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img src="images/yogurt.png" class="img-fluid" alt="yogurt project" />
         </div>
@@ -57,7 +57,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mb-5">
         <div class="col">
           <div class="project-info">
             <h2 class="mb-5">Weather Project</h2>
@@ -83,7 +83,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
             src="images/dictionary.png"
