--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/ad68c3bf92.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Check out projects I've been working on!</h1>
+
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/yogurt.png"
+              class="img-fluid mb-3"
+              alt="yogurt project photo"
+            />
+            <h3 class="text-center m-0">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/weather.png"
+              class="img-fluid mb-3"
+              alt="weather project photo"
+            />
+            <h3 class="text-center m-0">Weather Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, and Javascript
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/dictionary.png"
+              class="img-fluid mb-3"
+              alt="dictionary project photo"
+            />
+            <h3 class="text-center m-0">Dictionary Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS with React
+            </p>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/translation.png"
+              class="img-fluid mb-3"
+              alt="translation project photo"
+            />
+            <h3 class="text-center m-0">Translation Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS with React
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
