--- a/index.html
+++ b/index.html
@@ -25,11 +25,41 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="images/shecodes-logo.png"
+            class="logo d-none d-md-block"
+            alt="shecodes logo"
+          />
+          <img
+            src="images/small-logo.jpg"
+            class="logo d-block d-md-none"
+            alt="shecodes logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" class="active">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/projects.html">Projects </a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="introduction">
       <p>Hello, I'm</p>
       <h1>Chrys Pham</h1>
       <h2 class="mb-5">Front-end Developer based in Los Angeles</h2>
-      <a href="#" class="btn btn-primary">Contact Me</a>
+      <a href="/contact.html" class="btn btn-primary">Contact Me</a>
     </div>
 
     <p class="text-center m-5">Featured Projects which show my best work</p>
