updated all headers and buttons

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,36 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="images/shecodes-logo.png"
+            class="logo d-none d-md-block"
+            alt="shecodes logo"
+          />
+          <img
+            src="images/small-logo.jpg"
+            class="logo d-block d-md-none"
+            alt="shecodes logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/about.html">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/projects.html">Projects </a>
+          </li>
+          <li>
+            <a href="/" class="active">Contact </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's Talk!</h1>
