--- a/about.html
+++ b/about.html
@@ -25,6 +25,36 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="images/shecodes-logo.png"
+            class="logo d-none d-md-block"
+            alt="shecodes logo"
+          />
+          <img
+            src="images/small-logo.jpg"
+            class="logo d-block d-md-none"
+            alt="shecodes logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/index.html">Home</a>
+          </li>
+          <li>
+            <a href="/" class="active">About</a>
+          </li>
+          <li>
+            <a href="/projects.html">Projects </a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -37,7 +67,7 @@
               everything is well explained; homework and deadlines are good to
               keep focus.
             </p>
-            <a href="#" class="btn btn-primary">See my projects</a>
+            <a href="/projects.html" class="btn btn-primary">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
