--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact - Chrys Pham</title>
+    <meta
+      name="description"
+      content="These are some ways to get in contact with Chrys Pham!"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +31,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Home Page">
           <img
             src="images/shecodes-logo.png"
             class="logo d-none d-md-block"
@@ -41,16 +45,16 @@
         </a>
         <ul>
           <li>
-            <a href="/about.html">Home</a>
+            <a href="/about.html" title="Home Page">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About Chrys">About</a>
           </li>
           <li>
-            <a href="/projects.html">Projects </a>
+            <a href="/projects.html" title="Projects by Chrys">Projects </a>
           </li>
           <li>
-            <a href="/" class="active">Contact </a>
+            <a href="/" class="active" title="Contact Chrys">Contact </a>
           </li>
         </ul>
       </nav>
@@ -59,15 +63,29 @@
       <div class="content">
         <h1 class="mb-5">Let's Talk!</h1>
         <h3>Email</h3>
-        <a href="mailto:chrysabel.pham@gmail.com">chrysabel.pham@gmail.com</a>
+        <a href="mailto:chrysabel.pham@gmail.com" title="Email Chrys"
+          >chrysabel.pham@gmail.com</a
+        >
         <h3>Twitter</h3>
-        <a href="https://twitter.com/rilakkookma" targe="_blank">
+        <a
+          href="https://twitter.com/rilakkookma"
+          title="Twitter Profile"
+          target="_blank"
+        >
           @rilakkookma</a
         >
         <h3>Instagram</h3>
-        <a href="https://www.instagram.com/taeggi/" target="_blank">@taeggi</a>
+        <a
+          href="https://www.instagram.com/taeggi/"
+          title="Instagram Profile"
+          target="_blank"
+          >@taeggi</a
+        >
       </div>
     </div>
+    <p class="text-center mt-4">
+      This project was coded by Chrys Pham, and it is open-sourced.
+    </p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
