--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Front End Developer Portfolio - Chrys Pham</title>
+    <meta
+      name="description"
+      content="This is a portfolio for front end developer, Chrys Pham, who is based in Los Angeles."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +31,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Home Page">
           <img
             src="images/shecodes-logo.png"
             class="logo d-none d-md-block"
@@ -41,16 +45,16 @@
         </a>
         <ul>
           <li>
-            <a href="/" class="active">Home</a>
+            <a href="/" class="active" title="Home Page">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About Chrys">About</a>
           </li>
           <li>
-            <a href="/projects.html">Projects </a>
+            <a href="/projects.html" title="Projects by Chrys">Projects </a>
           </li>
           <li>
-            <a href="/contact.html">Contact </a>
+            <a href="/contact.html" title="Contact Chrys">Contact </a>
           </li>
         </ul>
       </nav>
@@ -149,23 +153,41 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:chrysabel.pham@gmail.com" class="email-link"
+          <a
+            href="mailto:chrysabel.pham@gmail.com"
+            class="email-link"
+            title="Email Chrys"
             >chrysabel.pham@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://www.instagram.com/taeggi/" target="_blank">
+          <a
+            href="https://www.instagram.com/taeggi/"
+            title="Instagram Profile"
+            target="_blank"
+          >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/chryspham" target="_blank">
+          <a
+            href="https://github.com/chryspham"
+            title="Github Profile"
+            target="_blank"
+          >
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="https://twitter.com/rilakkookma" target="_blank">
+          <a
+            href="https://twitter.com/rilakkookma"
+            title="Twitter Profile"
+            target="_blank"
+          >
             <i class="fa-brands fa-twitter"></i>
           </a>
         </div>
       </footer>
     </div>
+    <p class="text-center mt-4">
+      This project was coded by Chrys Pham, and it is open-sourced.
+    </p>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
