--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
       </footer>
     </div>
     <p class="text-center mt-4">
-      This project was coded by Chrys Pham, and it is open-sourced.
+      This project was coded by Chrys Pham, and it is
+      <a href="https://github.com/chryspham/portfolio-project">open-sourced</a>
     </p>
 
     <script
