--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,8 @@
       </div>
     </div>
     <p class="text-center mt-4">
-      This project was coded by Chrys Pham, and it is open-sourced.
+      This project was coded by Chrys Pham, and it is
+      <a href="https://github.com/chryspham/portfolio-project">open-sourced</a>
     </p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
